--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "hubakc"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.18", features = [ "derive" ]}
-ureq = "2.5.0"
+minreq = { version = "2.6.0", features = ["https-native"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5.9"
 anyhow = "1.0.66"
