--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hubakc"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,8 +10,10 @@ minreq = { version = "2.6.0", features = ["https-native"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5.9"
 anyhow = "1.0.66"
+itertools = "0.10.5"
 
 [profile.release]
+panic = "abort"
 opt-level = "z"
 lto = "fat"
 codegen-units = 1
