feat: support http_proxy

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 ttl = 3600
 timeout = 5
 cache_folder = "/tmp/hubakc"
+# http_proxy = "127.0.0.1:1080"
 [user_map]
 mgt = "Enter-tainer"
 jumpuser = ["Enter-tainer", "Shawlleyw"]
