--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "hubakc"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-minreq = { version = "2.6.0", features = ["https-native"] }
+minreq = { version = "2.6.0", features = ["https-native", "proxy"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5.9"
 anyhow = "1.0.66"
