--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hubakc"
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
 description = "Authorize an ssh session using your keys on GitHub."
 license = "MIT"
@@ -9,7 +9,7 @@ license = "MIT"
 [dependencies]
 minreq = { version = "2.11.2", features = ["https-native", "proxy"] }
 serde = { version = "1.0", features = ["derive"] }
-toml = "0.8"
+toml = { version = "0.8", features = ["parse"] }
 anyhow = "1"
 itertools = "0.13.0"
 
